--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -54,7 +54,7 @@ html {
   --nav-item-font-size: var(--font-size-medium);
   --nav-item-letter-spacing: 0.4rem;
   --nav-item-display: inline-block;
-  --nav-item-margin: 3rem 0 0 0;
+  --nav-item-margin: 0 0 3rem 0;
   --nav-item-link-hover: var(--color-primary);
 }
 
@@ -66,8 +66,13 @@ html {
   nav {
     margin: 0;
     padding: 0;
-    list-style: none;
     text-align: center;
+  }
+  
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
   
   nav .nav-item {
