--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -49,49 +49,15 @@ html {
   --section-footer-align: center;
   --footer-padding: 5rem 0 1rem;
 
+
   --nav-item-font-family: var(--font-family-title);
   --nav-item-font-weight: var(--font-weight-bold);
   --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 0.4rem;
+  --nav-item-letter-spacing: 
   --nav-item-display: inline-block;
-  --nav-item-margin: 0 0 3rem 0;
+  --nav-item-margin: 0 0 3rem 0; 
   --nav-item-link-hover: var(--color-primary);
 }
-
-
-.navbar-menu {
-    float: right;
-  }
-  
-  nav {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  nav .nav-item {
-    font-family: var(--nav-item-font-family);
-    font-weight: var(--nav-item-font-weight);
-    font-size: var(--nav-item-font-size);
-    letter-spacing: var(--nav-item-letter-spacing);
-    display: var(--nav-item-display);
-    margin: var(--nav-item-margin);
-  }
-  
-  nav .nav-link {
-    display: block;
-    padding: 0.5rem 1rem;
-  }
-  
-  nav .nav-link:hover {
-    color: var(--nav-item-link-hover);
-  }
 
 body {
   color: var(--text-color);
@@ -102,26 +68,27 @@ body {
 }
 
 a[href] {
-    color: var(--text-color);
-    text-decoration: none;
-  }
-  
-  a[href]:visited {
-    color: var(--text-color);
-    font-style: italic;
-    text-decoration: none;
-  }
-  
-  a[href]:hover {
-    color: var(--text-color);
-    text-decoration: underline;
-  }
-  
-  a[href]:active {
-    color: var(--text-color);
-    background-color: var(--color-light-grey);
-    text-decoration: none;
-  }
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+a[href]:visited {
+  color: var(--text-color);
+  font-style: italic;
+  text-decoration: none;
+}
+
+a[href]:hover {
+  color: var(--text-color);
+  text-decoration: underline;
+}
+
+a[href]:active {
+  color: var(--text-color);
+  background-color: var(--color-light-grey);
+  text-decoration: none;
+}
+
 .visually-hidden {
   display: none;
 }
@@ -131,8 +98,8 @@ a[href] {
 }
 
 .section {
-    padding: var(--section-padding);
-  }
+  padding: var(--section-padding);
+}
 
 .section-header {
   text-align: var(--section-header-align);
@@ -140,13 +107,13 @@ a[href] {
 }
 
 .section-body {
-    padding: var(--section-body-padding);
-  }
+  padding: var(--section-body-padding);
+}
 
-  .section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-  }
+.section-footer {
+  padding: var(--section-footer-padding);
+  text-align: var(--section-footer-align);
+}
 
 .section-title {
   font-family: var(--font-family-title);
@@ -164,10 +131,10 @@ a[href] {
 }
 
 .container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-family-title);
@@ -175,5 +142,35 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-    padding: var(--footer-padding);
-  }
+  padding: var(--footer-padding);
+}
+
+
+.navbar-menu {
+  float: right;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+  list-style: none; 
+  text-align: center;
+}
+
+.nav .nav-item {
+  font-family: var(--nav-item-font-family);
+  font-weight: var(--nav-item-font-weight);
+  font-size: var(--nav-item-font-size);
+  letter-spacing: var(--nav-item-letter-spacing);
+  display: var(--nav-item-display);
+  margin: var(--nav-item-margin);
+}
+
+.nav .nav-link {
+  display: block;
+  padding: 
+}
+
+.nav .nav-link:hover {
+  color: var(--nav-item-link-hover);
+}
