--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -53,10 +53,10 @@ html {
   --nav-item-font-family: var(--font-family-title);
   --nav-item-font-weight: var(--font-weight-bold);
   --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 
+  --nav-item-letter-spacing: 0.04em; /* Value added as it was missing */
   --nav-item-display: inline-block;
-  --nav-item-margin: 0 0 3rem 0; 
-  --nav-item-link-hover: var(--color-white);
+  --nav-item-margin: 0 0 3rem 0;
+  --nav-item-link-hover: var(--color-white); /* Changed to color-white */
 
   --section-tagline-margin: 0;
 
@@ -173,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav {
   margin: 0;
   padding: 0;
-  list-style: none; 
+  list-style: none;
   text-align: center;
 }
 
@@ -188,157 +188,152 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav .nav-link {
   display: block;
-  padding: 
+  padding: 0.5rem 1rem; 
+  position: relative; 
+
+.nav .nav-link::before { 
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--color-white);
+  width: 0;
+  height: 0.2rem; 
+}
+
+.nav .nav-item:hover .nav-link::before { 
+  background-color: var(--color-primary);
+  width: 100%;
 }
 
 .nav .nav-link:hover {
   color: var(--nav-item-link-hover);
 }
 
-nav .nav-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 2rem; 
-  }
-  
-  nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-primary);
-    width: 100%;
-  }
 ul.row {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-  [class^="col-"] {
-    float: left;
-    padding: 0.5rem;
-  }
+[class^="col-"] {
+  float: left;
+  padding: 0.5rem;
+}
 
-  .col-1-3 {
-    width: 33.33%;
-  }
+.col-1-3 {
+  width: 33.33%;
+}
 
-  .col-1-2 {
-    width: 50%;
-  }
+.col-1-2 {
+  width: 50%;
+}
 
-  .footer-copyright {
-    margin: 0;
-    font-size: var(--font-size-small);
-    color: var(--text-color);
-  }
+.footer-copyright {
+  margin: 0;
+  font-size: var(--font-size-small);
+  color: var(--text-color);
+}
 
-  .footer ul {
-    text-align: right;
-  }
+.footer ul {
+  text-align: right;
+}
 
-  .row::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-  [data-section-theme="dark"] {
-    --text-color: var(--color-white);
-    --section-title-color: var(--color-white);
-    background-color: var(--color-black);
-  }
+[data-section-theme="dark"] {
+  --text-color: var(--color-white);
+  --section-title-color: var(--color-white);
+  background-color: var(--color-black);
+  --button-color: var(--color-white);
+}
 
-  .footer-address {
-    color: var(--text-color);
-  }
-  
-  .social-link {
-    display: block;
-  }
-  
-  .social-link svg {
-    fill: var(--text-color);
-  }
+.footer-address {
+  color: var(--text-color);
+}
 
-  .card-services .card-title {
-    margin: 0;
-  }
-  
-  .card-services a {
-    display: block;
-    padding: 2rem;
-    background-color: var(--color-light-grey);
-  }
-  
-  .card-services a:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
-    text-decoration: none;
-  }
+.social-link {
+  display: block;
+}
 
-  .button {
-    display: var(--button-display);
-    padding: var(--button-padding);
-    border: var(--button-border);
-    font-size: var(--button-font-size);
-    color: var(--button-color);
-    text-decoration: var(--button-text-decoration);
-  }
+.social-link svg {
+  fill: var(--text-color);
+}
 
-  .button:hover {
-    color: var(--button-hover-color);
-    text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
-  }
+.card-services .card-title {
+  margin: 0;
+}
 
-  [data-section-theme="dark"] {
-    --text-color: var(--color-white);
-    --section-title-color: var(--color-white);
-    background-color: var(--color-black);
-    --button-color: var(--color-white);  /* 👈 Add this */
-  }
+.card-services a {
+  display: block;
+  padding: 2rem;
+  background-color: var(--color-light-grey);
+}
 
-  .card-testimonial {
-    text-align: center;
-  }
+.card-services a:hover {
+  color: var(--color-white);
+  background-color: var(--color-primary);
+  text-decoration: none;
+}
 
-  .card-testimonial .card-avatar {
-    border-radius: 50%;
-    width: 10rem;
-    height: 10rem;
-  }
+.button {
+  display: var(--button-display);
+  padding: var(--button-padding);
+  border: var(--button-border);
+  font-size: var(--button-font-size);
+  color: var(--button-color);
+  text-decoration: var(--button-text-decoration);
+}
 
-  .card-testimonial .card-quote cite {
-    display: block;
-    padding-top: 1rem;
-    color: var(--color-primary);
-  }
+.button:hover {
+  color: var(--button-hover-color);
+  text-decoration: var(--button-hover-text-decoration);
+  background-color: var(--button-hover-background);
+}
 
-  .section-hero {
-    background-size: 90rem auto;
-  }
+.card-testimonial {
+  text-align: center;
+}
 
-  .section-hero .section-title {
-    margin-bottom: 5rem;
-  }
+.card-testimonial .card-avatar {
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+}
 
-  .section-hero .section-inner {
-    padding: 10rem 40rem 2rem 0;
-  }
+.card-testimonial .card-quote cite {
+  display: block;
+  padding-top: 1rem;
+  color: var(--color-primary);
+}
 
-  .header {
-    padding: var(--header-padding);
-  }
+.section-hero {
+  background-size: 90rem auto;
+}
 
-  .header-logo {
-    position: var(--header-logo-position);
-  }
+.section-hero .section-title {
+  margin-bottom: 5rem;
+}
 
-  .header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-  }
+.section-hero .section-inner {
+  padding: 10rem 40rem 2rem 0;
+}
+
+.header {
+  padding: var(--header-padding);
+}
+
+.header-logo {
+  position: var(--header-logo-position);
+}
+
+.header-logo a {
+  display: var(--header-logo-link-display);
+  position: var(--header-logo-link-position);
+  top: var(--header-logo-link-top);
+  left: var(--header-logo-link-left);
+}
