--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -76,6 +76,9 @@ html {
   --header-logo-link-position: absolute;
   --header-logo-link-top: -1rem;
   --header-logo-link-left: 0;
+
+  --transition-duration: 0.3s;
+  --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
 body {
@@ -199,6 +202,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: var(--color-white);
   width: 0;
   height: 0.2rem; 
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-item:hover .nav-link::before { 
@@ -293,6 +297,8 @@ ul.row {
   color: var(--button-hover-color);
   text-decoration: var(--button-hover-text-decoration);
   background-color: var(--button-hover-background);
+  transition-duration: var(--transition-duration);
+  transition-property: color, background-color;
 }
 
 .card-testimonial {
@@ -356,10 +362,12 @@ ul.row {
     left: -0.1rem;
     right: -0.1rem;
     z-index: 1;
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
   }
   
   .card-work:hover .card-inner {
     background-color: rgba(0, 0, 0, 0.7);
+    
   }
   
   .card-work .card-title {
@@ -402,4 +410,14 @@ ul.row {
     color: #efeded;
     font-size: 10rem;
     z-index: -1;
+  }
+
+
+  .card-work:hover .card-image {
+    transform: scale(1.2);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
+  }
+  
+  .card-work:hover .card-outer {
+    transform: scale(0.95);
   }
