--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -53,10 +53,10 @@ html {
   --nav-item-font-family: var(--font-family-title);
   --nav-item-font-weight: var(--font-weight-bold);
   --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 0.04em; /* Value added as it was missing */
+  --nav-item-letter-spacing: 0.04em; 
   --nav-item-display: inline-block;
   --nav-item-margin: 0 0 3rem 0;
-  --nav-item-link-hover: var(--color-white); /* Changed to color-white */
+  --nav-item-link-hover: var(--color-white); 
 
   --section-tagline-margin: 0;
 
@@ -190,6 +190,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   padding: 0.5rem 1rem; 
   position: relative; 
+}
 
 .nav .nav-link::before { 
   content: "";
